# TrafficNow24

./: CMakeLists.txt  README.md  main.c
include/: traffic_junction.h
include_cmocka/: cmocka_platform.c  cmocka_platform.h
src/: traffic_junction.c
src/application/: traffic_junction.c  traffic_junction.h
src/drivers/: led.c  led.h
test/: general.c  test_traffic_junction.c
test/mocks/: mock_led.c
